--- a/faq.html
+++ b/faq.html
@@ -14,13 +14,17 @@
             <p>a</p>
         </div>
         <div class="column middle">
-          <h2>Me</h2>
-          <ul>
-          <li><p>HBO past bij mij omdat ik een HAVO diploma bij de Nehalennia heb gehaald en dit niveau dus aan moet kunnen.</p></li>
-          <img src="style/images/neh.png">
-          <li><p>ICT past goed bij mij omdat ik erg geinstresseed ben in computers en hoe die werken. Ook hoe software wordt geprogrammeerd vindt ik leuk en interresant.</p></li>
-          <img src="style/images/dog.jpg">
-          </ul>
+          <h2>FaQ</h2>
+          <p>Q. Hoe moet je een document printen vanaf je laptop bij HZ?</p>
+          <p>A. </p>
+          <p>Q. Hoe scan ik een document en stuur ik heb naar mij laptop?</p>
+          <p>A. </p>
+          <p>Q. Wat moet ik doen als ik ziek ben/ corona symptomen heb?</p>
+          <p>A. </p>
+          <p>Q. Hoe boek ik een project ruimte?</p>
+          <p>A. </p>
+          <p>Q. Wat zijn de instructies voor het parkeren van mijn auto?</p>
+          <p>A. </p>
         </div>
         <div class="column side">
         </div>
