--- a/profile.html
+++ b/profile.html
@@ -16,11 +16,11 @@
         <div class="column middle">
           <h2>Me</h2>
           <ul>
-          <li><p>HBO past bij mij omdat ik een HAVO diploma bij de Nehalennia heb gehaald en dit niveau dus aan moet kunnen.</p></li>
-          <img src="style/images/neh.png">
-          <li><p>ICT past goed bij mij omdat ik erg geinstresseed ben in computers en hoe die werken. Ook hoe software wordt geprogrammeerd vindt ik leuk en interresant.</p></li>
-          <img src="style/images/dog.jpg">
+            <li><p>Senna, 21 januari 2002</p></li>
+            <li><p>Nederland, Middelburg</p></li>
+            <li><p>Gamen</p></li>
           </ul>
+          <img src="style/images/middelburg.jpg">
         </div>
         <div class="column side">
         </div>
