--- a/dashboard.html
+++ b/dashboard.html
@@ -14,12 +14,17 @@
             <p>a</p>
         </div>
         <div class="column middle">
-          <h2>Me</h2>
+          <h2>Study monitor</h2>
+          <table style="width:100%">
+              <th>Test</th>
+          </table>
+          <h2>Study guide</h2>
           <ul>
-          <li><p>HBO past bij mij omdat ik een HAVO diploma bij de Nehalennia heb gehaald en dit niveau dus aan moet kunnen.</p></li>
-          <img src="style/images/neh.png">
-          <li><p>ICT past goed bij mij omdat ik erg geinstresseed ben in computers en hoe die werken. Ook hoe software wordt geprogrammeerd vindt ik leuk en interresant.</p></li>
-          <img src="style/images/dog.jpg">
+              <li><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen">CER</a></li>
+              <li><a href="https://learn.hz.nl/my/">learn.hz</a></li>
+              <li><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus">Studie voortgang</a></li>
+              <li><a href="#">Teams</a></li>
+              <li><a href="#">Github</a></li>
           </ul>
         </div>
         <div class="column side">
