--- a/faq.html
+++ b/faq.html
@@ -16,15 +16,15 @@
         <div class="column middle">
           <h2>FaQ</h2>
           <p>Q. Hoe moet je een document printen vanaf je laptop bij HZ?</p>
-          <p>A. </p>
-          <p>Q. Hoe scan ik een document en stuur ik heb naar mij laptop?</p>
+          <p>A. Ga naar het print menu, kies een printer.</p>
+          <p>Q. Hoe scan ik een document en stuur ik hem naar mij laptop?</p>
           <p>A. </p>
           <p>Q. Wat moet ik doen als ik ziek ben/ corona symptomen heb?</p>
-          <p>A. </p>
+          <p>A. Melden aan je coach en thuis werken</p>
           <p>Q. Hoe boek ik een project ruimte?</p>
-          <p>A. </p>
+          <p>A. Ga naar je persoonlijke menu op HZ.nl > Selfservice portal > Nieuwe reservering</p>
           <p>Q. Wat zijn de instructies voor het parkeren van mijn auto?</p>
-          <p>A. </p>
+          <p>A. Op het terrein van PZEM hebben wij 100 plaatsen, slagboom werkt op studentenpas, volg de HZ borden binnen.</p>
         </div>
         <div class="column side">
         </div>
