--- a/profile.html
+++ b/profile.html
@@ -18,9 +18,10 @@
           <ul>
             <li><p>Senna, 21 januari 2002</p></li>
             <li><p>Nederland, Middelburg</p></li>
-            <li><p>Gamen</p></li>
+            <li><p>In mijn vrije tijd game ik en kijk ik films/series</p></li>
           </ul>
           <img src="style/images/middelburg.jpg">
+          <img src="style/images/ik.jpg">
         </div>
         <div class="column side">
         </div>
