--- a/dashboard.html
+++ b/dashboard.html
@@ -23,8 +23,8 @@
               <li><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen">CER</a></li>
               <li><a href="https://learn.hz.nl/my/">learn.hz</a></li>
               <li><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus">Studie voortgang</a></li>
-              <li><a href="#">Teams</a></li>
-              <li><a href="#">Github</a></li>
+              <li><a href="https://teams.microsoft.com/_?culture=nl-nl&country=NL&lm=deeplink&lmsrc=homePageWeb&cmpid=WebSignIn#/school//?ctx=teamsGrid">Teams</a></li>
+              <li><a href="https://github.com/Senna2112">Github</a></li>
           </ul>
         </div>
         <div class="column side">
