--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 </head>
 <body>
     <ul id="menubalk">
-        <li><a href="index.html">Home</a></li>
+        <li id="m"><a href="index.html">Home</a></li>
         <li><a href="profile.html">Profile</a></li>
         <li><a href="dashboard.html">Dashboard</a></li>
         <li><a href="faq.html">FAQ</a></li>
+        <img src="style/images/praise.gif" width="100">
       </ul>
       <div class="row">
         <div class="column side">
