--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,7 @@
         <li><a href="profile.html">Profile</a></li>
         <li><a href="dashboard.html">Dashboard</a></li>
         <li><a href="faq.html">FAQ</a></li>
+        <img src="style/images/praise.gif" width="100">
       </ul>
       <div class="row">
         <div class="column side">
