--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
     <ul id="menubalk">
         <li><a href="index.html">Home</a></li>
         <li><a href="profile.html">Profile</a></li>
-        <li><a href="dashboard.html">Dashboard</a></li>
+        <li><a class="active" href="dashboard.html">Dashboard</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <img src="style/images/praise.gif" width="100">
       </ul>
@@ -17,10 +17,23 @@
         <div class="column middle">
           <h2>Study monitor</h2>
           <table style="width:100%">
-              <th>Test</th>
+              <td>B1</td>
+              <tr></tr>
+              <td>Opleidings- en beroepsorientatie</td>
+              <tr></tr>
+              <td>Computer science basics</td>
+              <tr></tr>
+              <td>Programming basics</td>
+              <tr></tr>
+              <td>B2</td>
+              <tr></tr>
+              <td>B3</td>
+              <tr></tr>
+              <td>B4</td>
           </table>
+          <br><br><br>
           <h2>Study guide</h2>
-          <ul>
+          <ul id="links">
               <li><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen">CER</a></li>
               <li><a href="https://learn.hz.nl/my/">learn.hz</a></li>
               <li><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus">Studie voortgang</a></li>
