--- a/faq.html
+++ b/faq.html
@@ -7,7 +7,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="profile.html">Profile</a></li>
         <li><a href="dashboard.html">Dashboard</a></li>
-        <li><a href="faq.html">FAQ</a></li>
+        <li><a class="active" href="faq.html">FAQ</a></li>
         <img src="style/images/praise.gif" width="100">
       </ul>
       <div class="row">
@@ -18,7 +18,7 @@
           <h2>FaQ</h2>
           <p>Q. Hoe moet je een document printen vanaf je laptop bij HZ?</p>
           <p>A. Ga naar het print menu, kies een printer.</p>
-          <p>Q. Hoe scan ik een document en stuur ik hem naar mij laptop?</p>
+          <p>Q. Hoe scan ik een document en stuur ik hem naar mijn laptop?</p>
           <p>A. </p>
           <p>Q. Wat moet ik doen als ik ziek ben/ corona symptomen heb?</p>
           <p>A. Melden aan je coach en thuis werken</p>
