--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
 <body>
     <ul id="menubalk">
         <li><a href="index.html">Home</a></li>
-        <li><a href="profile.html">Profile</a></li>
+        <li><a class="active" href="profile.html">Profile</a></li>
         <li><a href="dashboard.html">Dashboard</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <img src="style/images/praise.gif" width="100">
@@ -19,12 +19,14 @@
           <ul>
             <li><p>Senna, 21 januari 2002</p></li>
             <li><p>Nederland, Middelburg</p></li>
+            <li><p>HAVO diploma, Nehalennia</p></li>
             <li><p>In mijn vrije tijd game ik en kijk ik films/series</p></li>
           </ul>
           <img src="style/images/middelburg.jpg">
           <img src="style/images/ik.jpg">
         </div>
         <div class="column side">
+          <p></p>
         </div>
       </div>
 </body>
