--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <ul id="menubalk">
-        <li id="m"><a href="index.html">Home</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a href="profile.html">Profile</a></li>
         <li><a href="dashboard.html">Dashboard</a></li>
         <li><a href="faq.html">FAQ</a></li>
@@ -17,9 +17,9 @@
         <div class="column middle">
           <h2>Me</h2>
           <ul>
-          <li><p>HBO past bij mij omdat ik een HAVO diploma bij de Nehalennia heb gehaald en dit niveau dus aan moet kunnen.</p></li>
+          <li><p>HBO past bij mij omdat ik de eigen verantwoordelijkheid fijn vindt.</p></li>
           <img src="style/images/neh.png">
-          <li><p>ICT past goed bij mij omdat ik erg geinstresseed ben in computers en hoe die werken. Ook hoe software wordt geprogrammeerd vindt ik leuk en interresant.</p></li>
+          <li><p>ICT past goed bij mij omdat ik erg geinstresseed ben in computers en hoe die werken. Ook hoe software wordt geprogrammeerd vindt ik leuk en interresant. Ook lijkt het mij leuk om in groepjes aan projecten te werken.</p></li>
           <img src="style/images/dog.jpg">
           </ul>
         </div>
