--- a/dashboard.html
+++ b/dashboard.html
@@ -16,26 +16,90 @@
         </div>
         <div class="column middle">
           <h2>Study monitor</h2>
-          <table style="width:100%">
-              <td>B1</td>
-              <td>EC</td>
-              <tr></tr>
-              <td>Opleidings- en beroepsorientatie</td>
-              <tr></tr>
-              <td>Computer science basics</td>
-              <tr></tr>
-              <td>Programming basics</td>
-              <tr></tr>
-              <td>B2</td>
-              <tr></tr>
-              <td>B3</td>
-              <tr></tr>
-              <td>B4</td>
-          </table>
+          <table style="width: 400px;">
+            <tbody>
+            <tr style="height: 20px;">
+            <td style="width: 260px; height: 20px;">Blok</td>
+            <td style="width: 30px; height: 20px;">Behaalde EC's</td>
+            <td style="width: 30px; height: 20px;">Cijfer</td>
+            </tr>
+            <tr style="height: 30px;">
+            <td>
+            <table>
+            <tbody>
+            <tr>
+            <p>Opleidings- en beroepsorientatie</p>
+            </tr>
+            <tr>
+            <p>Computer science basics</p>
+            </tr>
+            <tr>
+            <p>Programming basics</p>
+            </tr>
+            </tbody>
+            </table>
+            </td>
+            <td>
+            <p>0/2,5</p>
+            <p>0/7,5</p>
+            <p>0/5</p>
+            </td>
+            <td>
+            </td>
+            </tr>
+            <tr style="height: 20px;">
+            <td>
+            <p>Professional skills 1</p>
+            <p>HZ personality 1</p>
+            <p>Object-oriented programming</p>
+            </td>
+            <td>
+            <p>0/2,5</p>
+            <p>0/2,5</p>
+            <p>0/10</p>
+            </td>
+            <td>
+            </td>
+            </tr>
+            <tr style="height: 20px;">
+            <td>
+            <p>Professional skills 2</p>
+            <p>Professionele werkplek</p>
+            <p>Framework development 1</p>
+            <p>Framework project 1</p>
+            </td>
+            <td>
+            <p>0/2,5</p>
+            <p>0/2,5</p>
+            <p>0/5</p>
+            <p>0/5</p>
+            </td>
+            <td>
+            </td>
+            </tr>
+            <tr style="height: 20px;">
+            <td>
+            <p>Professional skills 3</p>
+            <p>IT personality 1</p>
+            <p>Framework development 2</p>
+            <p>Framework project 2</p>
+            </td>
+            <td>
+            <p>0/2,5</p>
+            <p>0/2,5</p>
+            <p>0/5</p>
+            <p>0/5</p>
+            </td>
+            <td>
+            </td>
+            </tr>
+            </tbody>
+            </table>
           <br><br><br>
           <h2>Study guide</h2>
           <ul id="links">
               <li><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen">CER</a></li>
+              <li><a href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf">IR</a></li>
               <li><a href="https://learn.hz.nl/my/">learn.hz</a></li>
               <li><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus">Studie voortgang</a></li>
               <li><a href="https://teams.microsoft.com/_?culture=nl-nl&country=NL&lm=deeplink&lmsrc=homePageWeb&cmpid=WebSignIn#/school//?ctx=teamsGrid">Teams</a></li>
