--- a/faq.html
+++ b/faq.html
@@ -19,7 +19,7 @@
           <p>Q. Hoe moet je een document printen vanaf je laptop bij HZ?</p>
           <p>A. Ga naar het print menu, kies een printer.</p>
           <p>Q. Hoe scan ik een document en stuur ik hem naar mijn laptop?</p>
-          <p>A. </p>
+          <p>A. Leg het document op de scanplaat, open Fax and scan op je laptop en klik New scan</p>
           <p>Q. Wat moet ik doen als ik ziek ben/ corona symptomen heb?</p>
           <p>A. Melden aan je coach en thuis werken</p>
           <p>Q. Hoe boek ik een project ruimte?</p>
