--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="column middle">
           <h2>Me</h2>
           <ul>
-          <li><p>HBO past bij mij omdat ik de eigen verantwoordelijkheid fijn vindt.</p></li>
+          <li><p>HBO past bij mij omdat ik de eigen verantwoordelijkheid fijn vindt. En omdat ik de HAVO heb gedaan en dit dus een goed vervolg is.</p></li>
           <img src="style/images/neh.png">
           <li><p>ICT past goed bij mij omdat ik erg geinstresseed ben in computers en hoe die werken. Ook hoe software wordt geprogrammeerd vindt ik leuk en interresant. Ook lijkt het mij leuk om in groepjes aan projecten te werken.</p></li>
           <img src="style/images/dog.jpg">
