--- a/faq.html
+++ b/faq.html
@@ -10,25 +10,21 @@
         <li><a class="active" href="faq.html">FAQ</a></li>
         <img src="style/images/praise.gif" width="100">
       </ul>
-      <div class="row">
         <div class="column side">
-            <p>a</p>
+            <p> </p>
         </div>
         <div class="column middle">
           <h2>FaQ</h2>
-          <p>Q. Hoe moet je een document printen vanaf je laptop bij HZ?</p>
+          <p id="Q">Q. Hoe moet je een document printen vanaf je laptop bij HZ?</p>
           <p>A. Ga naar het print menu, kies een printer.</p>
-          <p>Q. Hoe scan ik een document en stuur ik hem naar mijn laptop?</p>
+          <p id="Q">Q. Hoe scan ik een document en stuur ik hem naar mijn laptop?</p>
           <p>A. Leg het document op de scanplaat, open Fax and scan op je laptop en klik New scan</p>
-          <p>Q. Wat moet ik doen als ik ziek ben/ corona symptomen heb?</p>
+          <p id="Q">Q. Wat moet ik doen als ik ziek ben/ corona symptomen heb?</p>
           <p>A. Melden aan je coach en thuis werken</p>
-          <p>Q. Hoe boek ik een project ruimte?</p>
+          <p id="Q">Q. Hoe boek ik een project ruimte?</p>
           <p>A. Ga naar je persoonlijke menu op HZ.nl > Selfservice portal > Nieuwe reservering</p>
-          <p>Q. Wat zijn de instructies voor het parkeren van mijn auto?</p>
+          <p id="Q">Q. Wat zijn de instructies voor het parkeren van mijn auto?</p>
           <p>A. Op het terrein van PZEM hebben wij 100 plaatsen, slagboom werkt op studentenpas, volg de HZ borden binnen.</p>
         </div>
-        <div class="column side">
-        </div>
-      </div>
 </body>
 </html>
