--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
         <li><a href="faq.html">FAQ</a></li>
         <img src="style/images/praise.gif" width="100">
       </ul>
-      <div class="row">
         <div class="column side">
-            <p>a</p>
+            <p> </p>
         </div>
         <div class="column middle">
-          <h2>Me</h2>
+          <h2>Home</h2>
           <ul>
           <li><p>HBO past bij mij omdat ik de eigen verantwoordelijkheid fijn vindt. En omdat ik de HAVO heb gedaan en dit dus een goed vervolg is.</p></li>
           <img src="style/images/neh.png">
@@ -23,8 +22,5 @@
           <img src="style/images/dog.jpg">
           </ul>
         </div>
-        <div class="column side">
-        </div>
-      </div>
 </body>
 </html>
