--- a/profile.html
+++ b/profile.html
@@ -10,12 +10,11 @@
         <li><a href="faq.html">FAQ</a></li>
         <img src="style/images/praise.gif" width="100">
       </ul>
-      <div class="row">
         <div class="column side">
-            <p>a</p>
+            <p> </p>
         </div>
         <div class="column middle">
-          <h2>Me</h2>
+          <h2>Profile</h2>
           <ul>
             <li><p>Senna, 21 januari 2002</p></li>
             <li><p>Nederland, Middelburg</p></li>
@@ -25,9 +24,5 @@
           <img src="style/images/middelburg.jpg">
           <img src="style/images/ik.jpg">
         </div>
-        <div class="column side">
-          <p></p>
-        </div>
-      </div>
 </body>
 </html>
