--- a/faq.html
+++ b/faq.html
@@ -15,15 +15,15 @@
         </div>
         <div class="column middle">
           <h2>FaQ</h2>
-          <p id="Q">Q. Hoe moet je een document printen vanaf je laptop bij HZ?</p>
+          <h1>Q. Hoe moet je een document printen vanaf je laptop bij HZ?</h1>
           <p>A. Ga naar het print menu, kies een printer.</p>
-          <p id="Q">Q. Hoe scan ik een document en stuur ik hem naar mijn laptop?</p>
+          <h1>Q. Hoe scan ik een document en stuur ik hem naar mijn laptop?</h1>
           <p>A. Leg het document op de scanplaat, open Fax and scan op je laptop en klik New scan</p>
-          <p id="Q">Q. Wat moet ik doen als ik ziek ben/ corona symptomen heb?</p>
+          <h1>Q. Wat moet ik doen als ik ziek ben/ corona symptomen heb?</h1>
           <p>A. Melden aan je coach en thuis werken</p>
-          <p id="Q">Q. Hoe boek ik een project ruimte?</p>
+          <h1>Q. Hoe boek ik een project ruimte?</h1>
           <p>A. Ga naar je persoonlijke menu op HZ.nl > Selfservice portal > Nieuwe reservering</p>
-          <p id="Q">Q. Wat zijn de instructies voor het parkeren van mijn auto?</p>
+          <h1>Q. Wat zijn de instructies voor het parkeren van mijn auto?</h1>
           <p>A. Op het terrein van PZEM hebben wij 100 plaatsen, slagboom werkt op studentenpas, volg de HZ borden binnen.</p>
         </div>
 </body>
