--- a/dashboard.html
+++ b/dashboard.html
@@ -18,12 +18,12 @@
           <table style="width: 400px;">
             <tbody>
             <tr style="height: 20px;">
-            <td style="width: 260px; height: 20px;">Blok</td>
-            <td style="width: 30px; height: 20px;">Behaalde EC's</td>
-            <td style="width: 30px; height: 20px;">Cijfer</td>
+            <td id="table-top" style="width: 260px; height: 20px;">Blok</td>
+            <td id="table-top" style="width: 30px; height: 20px;">Behaalde EC's</td>
+            <td id="table-top" style="width: 30px; height: 20px;">Cijfer</td>
             </tr>
             <tr style="height: 30px;">
-            <td>
+            <td  id="blok1">
             <table>
             <tbody>
             <tr>
@@ -38,71 +38,71 @@
             </tbody>
             </table>
             </td>
-            <td>
+            <td  id="blok1">
             <p>0/2,5</p>
             <p>0/7,5</p>
             <p>0/5</p>
             </td>
-            <td>
+            <td  id="blok1">
             </td>
             </tr>
             <tr style="height: 20px;">
-            <td>
+            <td  id="blok1">
             <p>Professional skills 1</p>
             <p>HZ personality 1</p>
             <p>Object-oriented programming</p>
             </td>
-            <td>
+            <td  id="blok1">
             <p>0/2,5</p>
             <p>0/2,5</p>
             <p>0/10</p>
             </td>
-            <td>
+            <td  id="blok1">
             </td>
             </tr>
             <tr style="height: 20px;">
-            <td>
+            <td  id="blok1">
             <p>Professional skills 2</p>
             <p>Professionele werkplek</p>
             <p>Framework development 1</p>
             <p>Framework project 1</p>
             </td>
-            <td>
+            <td  id="blok1">
             <p>0/2,5</p>
             <p>0/2,5</p>
             <p>0/5</p>
             <p>0/5</p>
             </td>
-            <td>
+            <td  id="blok1">
             </td>
             </tr>
             <tr style="height: 20px;">
-            <td>
+            <td  id="blok1">
             <p>Professional skills 3</p>
             <p>IT personality 1</p>
             <p>Framework development 2</p>
             <p>Framework project 2</p>
             </td>
-            <td>
+            <td  id="blok1">
             <p>0/2,5</p>
             <p>0/2,5</p>
             <p>0/5</p>
             <p>0/5</p>
             </td>
-            <td>
+            <td  id="blok1">
             </td>
             </tr>
             </tbody>
             </table>
           <br><br><br>
           <h2>Study guide</h2>
-          <ul id="links">
-              <li><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen">CER</a></li>
-              <li><a href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf">IR</a></li>
-              <li><a href="https://learn.hz.nl/my/">learn.hz</a></li>
-              <li><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus">Studie voortgang</a></li>
-              <li><a href="https://teams.microsoft.com/_?culture=nl-nl&country=NL&lm=deeplink&lmsrc=homePageWeb&cmpid=WebSignIn#/school//?ctx=teamsGrid">Teams</a></li>
-              <li><a href="https://github.com/Senna2112">Github</a></li>
+          <ul>
+              <li class="guide"><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen">HZ Course and Examination Regulations (CER)</a></li>
+              <li class="guide"><a href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf">Implementation Regulations (IR)</a></li>
+              <li class="guide"><a href="https://learn.hz.nl/my/">Learn omgeving HZ</a></li>
+              <li class="guide"><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus">Studie voortgang</a></li>
+              <li class="guide"><a href="https://teams.microsoft.com/_?culture=nl-nl&country=NL&lm=deeplink&lmsrc=homePageWeb&cmpid=WebSignIn#/school//?ctx=teamsGrid">Teams omgeving</a></li>
+              <li class="guide"><a href="https://github.com/Senna2112">Github</a></li>
           </ul>
         </div>
 </body>
