--- a/profile.html
+++ b/profile.html
@@ -15,12 +15,9 @@
         </div>
         <div class="column middle">
           <h2>Profile</h2>
-          <ul>
-            <li><p>Senna, 21 januari 2002</p></li>
-            <li><p>Nederland, Middelburg</p></li>
-            <li><p>HAVO diploma, Nehalennia</p></li>
-            <li><p>In mijn vrije tijd game ik en kijk ik films/series</p></li>
-          </ul>
+          <p>Ik ben Senna, ik ben 18 jaar en ik woon in Middelburg.<br>
+             Ik heb mijn HAVO diploma gehaald op de Nehalennia met het EM profiel.<br>
+             In mijn vrije tijd game ik graag of kijk ik films/series.</p> 
           <img src="style/images/middelburg.jpg">
           <img src="style/images/ik.jpg">
         </div>
