update study monitor

--- a/dashboard.html
+++ b/dashboard.html
@@ -15,86 +15,121 @@
         </div>
         <div class="column middle">
           <h2>Study monitor</h2>
-          <table style="width: 400px;">
-            <tbody>
-            <tr style="height: 20px;">
-            <td id="table-top" style="width: 260px; height: 20px;">Blok</td>
-            <td id="table-top" style="width: 30px; height: 20px;">Behaalde EC's</td>
-            <td id="table-top" style="width: 30px; height: 20px;">Cijfer</td>
-            </tr>
-            <tr style="height: 30px;">
-            <td  id="blok1">
-            <table>
-            <tbody>
+          <table>
             <tr>
-            <p>Opleidings- en beroepsorientatie</p>
+              <th>Blok</th>
+              <th>Cursus</th>
+              <th>EC</th>
+              <th>Toets</th>
+              <th>Cijfer</th>
             </tr>
             <tr>
-            <p>Computer science basics</p>
+              <td rowspan="3">1</td>
+              <td>Opleidings- en beroepsorientatie</td>
+              <td>2,5</td>
+              <td>Assessment</td>
+              <td></td>
             </tr>
             <tr>
-            <p>Programming basics</p>
+              <td>Computer Science Basics</td>
+              <td>7,5</td>
+              <td>Written</td>
+              <td></td>
             </tr>
-            </tbody>
-            </table>
-            </td>
-            <td  id="blok1">
-            <p>0/2,5</p>
-            <p>0/7,5</p>
-            <p>0/5</p>
-            </td>
-            <td  id="blok1">
-            </td>
+            <tr>
+              <td>Programming basics</td>
+              <td>5</td>
+              <td>Case Study</td>
+              <td></td>
             </tr>
-            <tr style="height: 20px;">
-            <td  id="blok1">
-            <p>Professional skills 1</p>
-            <p>HZ personality 1</p>
-            <p>Object-oriented programming</p>
-            </td>
-            <td  id="blok1">
-            <p>0/2,5</p>
-            <p>0/2,5</p>
-            <p>0/10</p>
-            </td>
-            <td  id="blok1">
-            </td>
+            <tr>
+              <td rowspan="4">2</td>
+              <td>Professional skills 1</td>
+              <td>2,5</td>
+              <td>Portfolio exam</td>
+              <td></td>
             </tr>
-            <tr style="height: 20px;">
-            <td  id="blok1">
-            <p>Professional skills 2</p>
-            <p>Professionele werkplek</p>
-            <p>Framework development 1</p>
-            <p>Framework project 1</p>
-            </td>
-            <td  id="blok1">
-            <p>0/2,5</p>
-            <p>0/2,5</p>
-            <p>0/5</p>
-            <p>0/5</p>
-            </td>
-            <td  id="blok1">
-            </td>
+            <tr>
+              <td>HZ Personality 1</td>
+              <td>2,5</td>
+              <td></td>
+              <td></td>
             </tr>
-            <tr style="height: 20px;">
-            <td  id="blok1">
-            <p>Professional skills 3</p>
-            <p>IT personality 1</p>
-            <p>Framework development 2</p>
-            <p>Framework project 2</p>
-            </td>
-            <td  id="blok1">
-            <p>0/2,5</p>
-            <p>0/2,5</p>
-            <p>0/5</p>
-            <p>0/5</p>
-            </td>
-            <td  id="blok1">
-            </td>
+            <tr>
+              <td rowspan="2">Object-oriented programming</td>
+              <td rowspan="2">10</td>
+              <td>Case study</td>
+              <td rowspan="2"></td>
             </tr>
-            </tbody>
-            </table>
-          <br><br><br>
+            <tr>
+              <td>Project</td>
+            </tr>
+            <tr>
+              <td rowspan="7">3</td>
+              <td rowspan="2">Framework Project 1</td>
+              <td rowspan="2">5</td>
+              <td>Portfolio exam</td>
+              <td rowspan="2"></td>
+            </tr>
+            <tr>
+              <td>Portfolio exam</td>
+            </tr>
+            <tr>
+              <td>Framework development 1</td>
+              <td>5</td>
+              <td>Case study</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Professional working environment</td>
+              <td>2,5</td>
+              <td>Assessment</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td rowspan="3">Professional skills 2</td>
+              <td rowspan="3">2,5</td>
+              <td>Portfolio exam</td>
+              <td rowspan="3"></td>
+            </tr>
+            <tr>
+              <td>Written</td>
+            </tr>
+            <tr>
+              <td>Written</td>
+            </tr>
+            <tr>
+              <td rowspan="6">4</td>
+              <td>Framework project 2</td>
+              <td>5</td>
+              <td>Portfolio exam</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Framework development 2</td>
+              <td>5</td>
+              <td>Portfolio exam</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>IT personality 1</td>
+              <td>2,5</td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td rowspan="3">Professional skills 3</td>
+              <td rowspan="3">2,5</td>
+              <td>Portfolio exam</td>
+              <td rowspan="3"></td>
+            </tr>
+            <tr>
+              <td>Written</td>
+            </tr>
+            <tr>
+              <td>Written</td>
+            </tr>
+          </table>
           <h2>Study guide</h2>
           <ul>
               <li class="guide"><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen">HZ Course and Examination Regulations (CER)</a></li>
