--- a/faq.html
+++ b/faq.html
@@ -20,11 +20,12 @@
           <h1>Q. Hoe scan ik een document en stuur ik hem naar mijn laptop?</h1>
           <p>A. Leg het document op de scanplaat, open Fax and scan op je laptop en klik New scan</p>
           <h1>Q. Wat moet ik doen als ik ziek ben/ corona symptomen heb?</h1>
-          <p>A. Melden aan je coach en thuis werken</p>
+          <p>A. Melden aan je coach en thuis werken aan school</p>
           <h1>Q. Hoe boek ik een project ruimte?</h1>
           <p>A. Ga naar je persoonlijke menu op HZ.nl > Selfservice portal > Nieuwe reservering</p>
           <h1>Q. Wat zijn de instructies voor het parkeren van mijn auto?</h1>
-          <p>A. Op het terrein van PZEM hebben wij 100 plaatsen, slagboom werkt op studentenpas, volg de HZ borden binnen.</p>
+          <p>A. Op het terrein bij de Poelendaelsingel 10 heeft de HZ 100 parkeer plaatsen, de slagboom gaat open met je studentenpas
+             volg binnen het terrein de HZ borden.</p>
         </div>
 </body>
 </html>
