--- a/faq.html
+++ b/faq.html
@@ -18,7 +18,7 @@
           <h1>Q. Hoe moet je een document printen vanaf je laptop bij HZ?</h1>
           <p>A. Ga naar het print menu, kies een printer.</p>
           <h1>Q. Hoe scan ik een document en stuur ik hem naar mijn laptop?</h1>
-          <p>A. Leg het document op de scanplaat, open Fax and scan op je laptop en klik New scan</p>
+          <p>A. Leg het document op de scanplaat, open Fax and scan op je laptop en klik New scan, stuur het bestand als pdf naar je email</p>
           <h1>Q. Wat moet ik doen als ik ziek ben/ corona symptomen heb?</h1>
           <p>A. Melden aan je coach en thuis werken aan school</p>
           <h1>Q. Hoe boek ik een project ruimte?</h1>
