--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><p>HBO past bij mij omdat ik de eigen verantwoordelijkheid fijn vindt.<br>
              En omdat ik de HAVO heb gedaan en dit dus een goed vervolg is.</p></li>
           <img src="style/images/hzlogo.png" width="600">
-          <li><p>ICT past goed bij mij omdat ik erg geinstresseed ben in computers en hoe die werken.<br>
+          <li><p>ICT past goed bij mij omdat ik erg geinstresseerd ben in computers en hoe die werken.<br>
              Ook hoe software wordt geprogrammeerd vindt ik leuk en interresant.<br>
               Ook lijkt het mij leuk om in groepjes aan projecten te werken.</p></li>
           <img src="style/images/ict.jpg" width="600">
