--- a/dashboard.html
+++ b/dashboard.html
@@ -130,14 +130,17 @@
               <td>Written</td>
             </tr>
           </table>
+          <div id="progress">
+            <p>0/45</p>
+          </div>
           <h2>Study guide</h2>
           <ul>
-              <li class="guide"><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen">HZ Course and Examination Regulations (CER)</a></li>
-              <li class="guide"><a href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf">Implementation Regulations (IR)</a></li>
-              <li class="guide"><a href="https://learn.hz.nl/my/">Learn omgeving HZ</a></li>
-              <li class="guide"><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus">Studie voortgang</a></li>
-              <li class="guide"><a href="https://teams.microsoft.com/_?culture=nl-nl&country=NL&lm=deeplink&lmsrc=homePageWeb&cmpid=WebSignIn#/school//?ctx=teamsGrid">Teams omgeving</a></li>
-              <li class="guide"><a href="https://github.com/Senna2112">Github</a></li>
+              <li class="guide"><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen" target="_blank">HZ Course and Examination Regulations (CER)</a></li>
+              <li class="guide"><a href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf" target="_blank">Implementation Regulations (IR)</a></li>
+              <li class="guide"><a href="https://learn.hz.nl/my/" target="_blank">Learn omgeving HZ</a></li>
+              <li class="guide"><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus" target="_blank">Studie voortgang</a></li>
+              <li class="guide"><a href="https://teams.microsoft.com/_?culture=nl-nl&country=NL&lm=deeplink&lmsrc=homePageWeb&cmpid=WebSignIn#/school//?ctx=teamsGrid" target="_blank">Teams omgeving</a></li>
+              <li class="guide"><a href="https://github.com/Senna2112" target="_blank">Github</a></li>
           </ul>
         </div>
 </body>
