--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
         <li><a href="profile.html">Profile</a></li>
         <li><a class="active" href="dashboard.html">Dashboard</a></li>
         <li><a href="faq.html">FAQ</a></li>
-        <img src="style/images/praise.gif" width="100">
+        <img src="style/images/hz.png" width="100">
       </ul>
         <div class="column side">
             <p> </p>
@@ -131,7 +131,7 @@
             </tr>
           </table>
           <div id="progress">
-            <p>0/45</p>
+            <p>0/45 EC</p>
           </div>
           <h2>Study guide</h2>
           <ul>
