--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
         <li><a href="profile.html">Profile</a></li>
         <li><a href="dashboard.html">Dashboard</a></li>
         <li><a class="active" href="faq.html">FAQ</a></li>
-        <img src="style/images/praise.gif" width="100">
+        <img src="style/images/hz.png" width="100">
       </ul>
         <div class="column side">
             <p> </p>
