--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
           <li><p>HBO past bij mij omdat ik de eigen verantwoordelijkheid fijn vindt.<br>
              En omdat ik de HAVO heb gedaan en dit dus een goed vervolg is.</p></li>
           <img src="style/images/hzlogo.png" width="600">
-          <li><p>ICT past goed bij mij omdat ik computers en hoe die werken interresant vindt.<br>
+          <li><p>ICT past goed bij mij omdat ik altijd al veel intresse in computers heb gehad.<br>
              Ook hoe software wordt geprogrammeerd vindt ik leuk en interresant.<br>
+             Op de middelbare school heb ik programmeren en informatica gevolgt en merkte ik al dat ik programmeren wel leuk vond.
               Ook lijkt het mij leuk om in groepjes aan projecten te werken.</p></li>
           <img src="style/images/ict.jpg" width="600">
           </ul>
