--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <img src="style/images/hzlogo.png" width="600">
           <li><p>ICT past goed bij mij omdat ik altijd al veel intresse in computers heb gehad.<br>
              Ook hoe software wordt geprogrammeerd vindt ik leuk en interresant.<br>
-             Op de middelbare school heb ik programmeren en informatica gevolgt en merkte ik al dat ik programmeren wel leuk vond.
+             Op de middelbare school heb ik programmeren en informatica gevolgt en merkte ik al dat ik programmeren wel leuk vond.<br>
               Ook lijkt het mij leuk om in groepjes aan projecten te werken.</p></li>
           <img src="style/images/ict.jpg" width="600">
           </ul>
