--- a/dashboard.html
+++ b/dashboard.html
@@ -135,7 +135,7 @@
           </div>
           <h2>Study guide</h2>
           <ul>
-              <li class="guide"><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen" target="_blank">HZ Course and Examination Regulations (CER)</a></li>
+              <li class="guide"><a href="https://hz.nl/uploads/documents/Regelingen/OERS/OER-HZ-2019-2020-Ba.pdf" target="_blank">HZ Course and Examination Regulations (CER)</a></li>
               <li class="guide"><a href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf" target="_blank">Implementation Regulations (IR)</a></li>
               <li class="guide"><a href="https://learn.hz.nl/my/" target="_blank">Learn omgeving HZ</a></li>
               <li class="guide"><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus" target="_blank">Studie voortgang</a></li>
