--- a/faq.html
+++ b/faq.html
@@ -16,13 +16,13 @@
         <div class="column middle">
           <h2>FaQ</h2>
           <h1>Q. Hoe moet je een document printen vanaf je laptop bij HZ?</h1>
-          <p>A. Ga naar het print menu, kies een printer.</p>
+          <p>A. Met je studentenpas gebruik Airprinter.</p>
           <h1>Q. Hoe scan ik een document en stuur ik hem naar mijn laptop?</h1>
-          <p>A. Leg het document op de scanplaat, open Fax and scan op je laptop en klik New scan, stuur het bestand als pdf naar je email</p>
+          <p>A. Bij de printer kan je het document scannen met je studentenpas en stuurt hij hem naar je mail.</p>
           <h1>Q. Wat moet ik doen als ik ziek ben/ corona symptomen heb?</h1>
-          <p>A. Melden aan je coach en thuis werken aan school</p>
+          <p>A. Melden aan je coach en thuis werken aan school.</p>
           <h1>Q. Hoe boek ik een project ruimte?</h1>
-          <p>A. Ga naar je persoonlijke menu op HZ.nl > Selfservice portal > Nieuwe reservering</p>
+          <p>A. Ga naar je persoonlijke menu op HZ.nl > Selfservice portal > Nieuwe reservering.</p>
           <h1>Q. Wat zijn de instructies voor het parkeren van mijn auto?</h1>
           <p>A. Op het terrein bij de Poelendaelsingel 10 heeft de HZ 100 parkeer plaatsen, de slagboom gaat open met je studentenpas
              volg binnen het terrein de HZ borden.</p>
