--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <ul id="menubalk">
+    <ul class="menubalk">
         <li><a href="index.html">Home</a></li>
         <li><a class="active" href="profile.html">Profile</a></li>
         <li><a href="dashboard.html">Dashboard</a></li>
@@ -11,7 +11,7 @@
         <img src="style/images/hz.png" width="100">
       </ul>
         <div class="column side">
-            <p> </p>
+          &nbsp
         </div>
         <div class="column middle">
           <h2>Profile</h2>
