--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <ul id="menubalk">
+    <ul class="menubalk">
         <li><a href="index.html">Home</a></li>
         <li><a href="profile.html">Profile</a></li>
         <li><a class="active" href="dashboard.html">Dashboard</a></li>
@@ -11,7 +11,7 @@
         <img src="style/images/hz.png" width="100">
       </ul>
         <div class="column side">
-            <p> </p>
+            &nbsp
         </div>
         <div class="column middle">
           <h2>Study monitor</h2>
@@ -130,8 +130,11 @@
               <td>Written</td>
             </tr>
           </table>
-          <div id="progress">
-            <p>0/45 EC</p>
+          <h2>Behaalde EC's</h2>
+          <div class="progressbar">
+            <div>
+              0/60 
+            </div>
           </div>
           <h2>Study guide</h2>
           <ul>
