--- a/dashboard.html
+++ b/dashboard.html
@@ -133,7 +133,7 @@
           <h2>Behaalde EC's</h2>
           <div class="progressbar">
             <div>
-              0/60 
+              0/60 <!--Voer hier EC's in-->
             </div>
           </div>
           <h2>Study guide</h2>
