--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
             <li>
               <p>Ik ben Senna, ik ben 18 jaar en ik woon in Middelburg.<br>
               Ik heb mijn HAVO diploma gehaald op de Nehalennia met het EM profiel.<br>
-              In mijn vrije tijd game ik graag of kijk ik films/series.</p>
+              In mijn vrije tijd game ik graag of kijk ik films/series. Mijn favoriete game franchise is Dark Souls.</p>
             </li>
           </ul>
           <img src="style/images/middelburg.jpg">
