--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul class="menubalk">
@@ -8,7 +8,9 @@
         <li><a href="profile.html">Profile</a></li>
         <li><a href="dashboard.html">Dashboard</a></li>
         <li><a href="faq.html">FAQ</a></li>
-        <img src="style/images/hz.png" width="100">
+        <li><a href="mymotivation.html">My Motivation</a></li>
+        <li><a href="profession.html">Profession</a></li>
+        <img src="img/hz.png" width="100">
       </ul>
         <div class="column side">
           &nbsp
@@ -18,12 +20,12 @@
           <ul>
           <li><p>HBO past bij mij omdat ik de eigen verantwoordelijkheid fijn vindt.<br>
              En omdat ik de HAVO heb gedaan en dit dus een goed vervolg is.</p></li>
-          <img src="style/images/hzlogo.png" width="600">
+          <img src="img/hzlogo.png" width="600">
           <li><p>ICT past goed bij mij omdat ik altijd al veel intresse in computers heb gehad.<br>
              Ook hoe software wordt geprogrammeerd vindt ik leuk en interresant.<br>
              Op de middelbare school heb ik programmeren en informatica gevolgt en merkte ik al dat ik programmeren wel leuk vond.<br>
               Ook lijkt het mij leuk om in groepjes aan projecten te werken.</p></li>
-          <img src="style/images/ict.jpg" width="600">
+          <img src="img/ict.jpg" width="600">
           </ul>
         </div>
 </body>
