--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul class="menubalk">
@@ -8,7 +8,9 @@
         <li><a class="active" href="profile.html">Profile</a></li>
         <li><a href="dashboard.html">Dashboard</a></li>
         <li><a href="faq.html">FAQ</a></li>
-        <img src="style/images/hz.png" width="100">
+        <li><a href="mymotivation.html">My Motivation</a></li>
+        <li><a href="profession.html">Profession</a></li>
+        <img src="img/hz.png" width="100">
       </ul>
         <div class="column side">
           &nbsp
@@ -22,8 +24,8 @@
               In mijn vrije tijd game ik graag of kijk ik films/series. Mijn favoriete game franchise is Dark Souls.</p>
             </li>
           </ul>
-          <img src="style/images/middelburg.jpg">
-          <img src="style/images/ik.jpg">
+          <img src="img/middelburg.jpg">
+          <img src="img/ik.jpg">
         </div>
 </body>
 </html>
