--- a/faq.html
+++ b/faq.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul class="menubalk">
@@ -8,7 +8,9 @@
         <li><a href="profile.html">Profile</a></li>
         <li><a href="dashboard.html">Dashboard</a></li>
         <li><a class="active" href="faq.html">FAQ</a></li>
-        <img src="style/images/hz.png" width="100">
+        <li><a href="mymotivation.html">My Motivation</a></li>
+        <li><a href="profession.html">Profession</a></li>
+        <img src="img/hz.png" width="100">
       </ul>
         <div class="column side">
           &nbsp
